--- a/css/main.css
+++ b/css/main.css
@@ -545,10 +545,6 @@ html {
   }
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -575,16 +571,8 @@ html {
   margin-bottom: 5rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
 .ml-5 {
   margin-left: 1.25rem;
-}
-
-.ml-\[12rem\] {
-  margin-left: 12rem;
 }
 
 .mt-14 {
@@ -611,6 +599,46 @@ html {
   margin-top: 2.25rem;
 }
 
+.ml-\[12rem\] {
+  margin-left: 12rem;
+}
+
+.ml-\[14rem\] {
+  margin-left: 14rem;
+}
+
+.ml-\[24rem\] {
+  margin-left: 24rem;
+}
+
+.ml-\[22rem\] {
+  margin-left: 22rem;
+}
+
+.ml-\[29rem\] {
+  margin-left: 29rem;
+}
+
+.ml-\[25rem\] {
+  margin-left: 25rem;
+}
+
+.ml-\[26rem\] {
+  margin-left: 26rem;
+}
+
+.ml-\[28rem\] {
+  margin-left: 28rem;
+}
+
+.ml-\[27rem\] {
+  margin-left: 27rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -627,20 +655,8 @@ html {
   height: auto;
 }
 
-.w-\[1000px\] {
-  width: 1000px;
-}
-
-.w-\[1024px\] {
-  width: 1024px;
-}
-
-.w-\[1050px\] {
-  width: 1050px;
-}
-
-.w-\[1170px\] {
-  width: 1170px;
+.w-\[1110px\] {
+  width: 1110px;
 }
 
 .w-\[310px\] {
@@ -649,22 +665,6 @@ html {
 
 .w-\[320px\] {
   width: 320px;
-}
-
-.w-\[850px\] {
-  width: 850px;
-}
-
-.w-\[985px\] {
-  width: 985px;
-}
-
-.w-\[1110px\] {
-  width: 1110px;
-}
-
-.max-w-\[1000px\] {
-  max-width: 1000px;
 }
 
 .max-w-xs {
@@ -679,6 +679,10 @@ html {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -691,10 +695,8 @@ html {
   justify-content: space-between;
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+.justify-around {
+  justify-content: space-around;
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -709,26 +711,22 @@ html {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-\[10rem\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(10rem * var(--tw-space-x-reverse));
-  margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-0 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0px * var(--tw-space-x-reverse));
+  margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .bg-black {
@@ -748,14 +746,6 @@ html {
 
 .p-\[4rem\] {
   padding: 4rem;
-}
-
-.p-\[1rem\] {
-  padding: 1rem;
-}
-
-.p-\[2rem\] {
-  padding: 2rem;
 }
 
 .px-\[25rem\] {
@@ -782,18 +772,6 @@ html {
   padding-bottom: 10rem;
 }
 
-.pl-\[14rem\] {
-  padding-left: 14rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -810,20 +788,48 @@ html {
   padding-top: 2.25rem;
 }
 
-.pt-\[6rem\] {
-  padding-top: 6rem;
-}
-
 .pt-\[7rem\] {
   padding-top: 7rem;
 }
 
-.pt-\[8\.5rem\] {
-  padding-top: 8.5rem;
+.pl-\[14rem\] {
+  padding-left: 14rem;
 }
 
-.pt-\[8rem\] {
-  padding-top: 8rem;
+.pl-\[12rem\] {
+  padding-left: 12rem;
+}
+
+.pl-\[0\.5rem\] {
+  padding-left: 0.5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
+.pl-\[6rem\] {
+  padding-left: 6rem;
+}
+
+.pl-\[7rem\] {
+  padding-left: 7rem;
+}
+
+.pl-\[20rem\] {
+  padding-left: 20rem;
+}
+
+.pl-\[18rem\] {
+  padding-left: 18rem;
+}
+
+.pl-\[19rem\] {
+  padding-left: 19rem;
+}
+
+.pl-\[15rem\] {
+  padding-left: 15rem;
 }
 
 .text-left {
@@ -840,28 +846,6 @@ html {
 
 .font-poppins {
   font-family: 'poppins', sans-serif;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[2rem\] {
-  font-size: 2rem;
-}
-
-.text-\[3\.2rem\] {
-  font-size: 3.2rem;
-}
-
-.text-\[4\.5rem\] {
-  font-size: 4.5rem;
 }
 
 .text-\[4rem\] {
@@ -918,11 +902,6 @@ html {
   line-height: 2.25rem;
 }
 
-.text-dark {
-  --tw-text-opacity: 1;
-  color: rgb(3 3 4 / var(--tw-text-opacity));
-}
-
 .text-gray {
   --tw-text-opacity: 1;
   color: rgb(153 153 153 / var(--tw-text-opacity));
@@ -973,147 +952,99 @@ html {
     margin-right: auto;
   }
 
-  .sm\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
-  .sm\:mt-8 {
-    margin-top: 2rem;
-  }
-
-  .sm\:mt-12 {
-    margin-top: 3rem;
-  }
-
-  .sm\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .sm\:ml-8 {
-    margin-left: 2rem;
-  }
-
   .sm\:ml-6 {
     margin-left: 1.5rem;
-  }
-
-  .sm\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .sm\:ml-\[5rem\] {
-    margin-left: 5rem;
-  }
-
-  .sm\:ml-\[2rem\] {
-    margin-left: 2rem;
   }
 
   .sm\:ml-\[1\.5rem\] {
     margin-left: 1.5rem;
   }
 
+  .sm\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .sm\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
   .sm\:mt-6 {
     margin-top: 1.5rem;
   }
 
-  .sm\:mt-1 {
-    margin-top: 0.25rem;
+  .sm\:mt-8 {
+    margin-top: 2rem;
   }
 
-  .sm\:mt-4 {
-    margin-top: 1rem;
+  .sm\:ml-0 {
+    margin-left: 0px;
   }
 
-  .sm\:mt-5 {
-    margin-top: 1.25rem;
+  .sm\:ml-5 {
+    margin-left: 1.25rem;
   }
 
-  .sm\:flex {
-    display: flex;
+  .sm\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .sm\:ml-16 {
+    margin-left: 4rem;
+  }
+
+  .sm\:ml-\[5rem\] {
+    margin-left: 5rem;
+  }
+
+  .sm\:ml-\[0rem\] {
+    margin-left: 0rem;
   }
 
   .sm\:hidden {
     display: none;
   }
 
-  .sm\:w-\[500px\] {
-    width: 500px;
-  }
-
-  .sm\:w-\[1000px\] {
-    width: 1000px;
+  .sm\:w-\[400px\] {
+    width: 400px;
   }
 
   .sm\:w-\[900px\] {
     width: 900px;
   }
 
-  .sm\:w-\[999px\] {
-    width: 999px;
+  .sm\:max-w-none {
+    max-width: none;
   }
 
-  .sm\:w-\[800px\] {
-    width: 800px;
-  }
-
-  .sm\:w-\[200px\] {
-    width: 200px;
-  }
-
-  .sm\:w-\[400px\] {
-    width: 400px;
-  }
-
-  .sm\:w-\[990px\] {
-    width: 990px;
+  .sm\:flex-row {
+    flex-direction: row;
   }
 
   .sm\:flex-col {
     flex-direction: column;
   }
 
-  .sm\:justify-start {
-    justify-content: flex-start;
-  }
-
   .sm\:justify-center {
     justify-content: center;
   }
 
-  .sm\:p-5 {
-    padding: 1.25rem;
+  .sm\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .sm\:p-6 {
     padding: 1.5rem;
   }
 
-  .sm\:p-\[4rem\] {
-    padding: 4rem;
-  }
-
-  .sm\:p-\[2rem\] {
-    padding: 2rem;
-  }
-
-  .sm\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
-  .sm\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .sm\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .sm\:px-8 {
@@ -1126,12 +1057,16 @@ html {
     padding-right: 2.25rem;
   }
 
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  .sm\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
-  .sm\:pt-\[3rem\] {
+  .sm\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .sm\:pt-12 {
     padding-top: 3rem;
   }
 
@@ -1139,53 +1074,40 @@ html {
     padding-top: 1.25rem;
   }
 
-  .sm\:pt-\[2rem\] {
-    padding-top: 2rem;
+  .sm\:pt-\[1\.2rem\] {
+    padding-top: 1.2rem;
   }
 
   .sm\:pt-\[2\.5rem\] {
     padding-top: 2.5rem;
   }
 
-  .sm\:pl-5 {
-    padding-left: 1.25rem;
-  }
-
-  .sm\:pl-6 {
-    padding-left: 1.5rem;
-  }
-
-  .sm\:pt-\[7rem\] {
-    padding-top: 7rem;
-  }
-
-  .sm\:pt-\[1\.5rem\] {
-    padding-top: 1.5rem;
-  }
-
-  .sm\:pt-\[1\.2rem\] {
-    padding-top: 1.2rem;
-  }
-
-  .sm\:pt-12 {
+  .sm\:pt-\[3rem\] {
     padding-top: 3rem;
   }
 
-  .sm\:pt-\[5rem\] {
-    padding-top: 5rem;
-  }
-
-  .sm\:pt-\[4rem\] {
-    padding-top: 4rem;
+  .sm\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .sm\:text-center {
     text-align: center;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-\[1\.5rem\] {
+    font-size: 1.5rem;
+  }
+
+  .sm\:text-\[2\.5rem\] {
+    font-size: 2.5rem;
+  }
+
+  .sm\:text-\[2rem\] {
+    font-size: 2rem;
+  }
+
+  .sm\:text-\[3rem\] {
+    font-size: 3rem;
   }
 
   .sm\:text-lg {
@@ -1193,37 +1115,74 @@ html {
     line-height: 1.75rem;
   }
 
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .sm\:text-\[1\.5rem\] {
-    font-size: 1.5rem;
-  }
-
-  .sm\:text-\[3rem\] {
-    font-size: 3rem;
-  }
-
-  .sm\:text-\[2rem\] {
-    font-size: 2rem;
-  }
-
-  .sm\:text-\[2\.5rem\] {
-    font-size: 2.5rem;
-  }
-
-  .sm\:font-semibold {
-    font-weight: 600;
-  }
-
-  .sm\:font-medium {
-    font-weight: 500;
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
 @media (min-width: 768px) {
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:mt-\[0\.2rem\] {
+    margin-top: 0.2rem;
+  }
+
+  .md\:ml-8 {
+    margin-left: 2rem;
+  }
+
+  .md\:-ml-10 {
+    margin-left: -2.5rem;
+  }
+
+  .md\:-ml-14 {
+    margin-left: -3.5rem;
+  }
+
+  .md\:ml-\[2rem\] {
+    margin-left: 2rem;
+  }
+
+  .md\:-ml-\[2rem\] {
+    margin-left: -2rem;
+  }
+
+  .md\:-ml-\[5rem\] {
+    margin-left: -5rem;
+  }
+
+  .md\:-ml-\[10rem\] {
+    margin-left: -10rem;
+  }
+
+  .md\:-ml-\[12rem\] {
+    margin-left: -12rem;
+  }
+
+  .md\:-ml-\[12\.5rem\] {
+    margin-left: -12.5rem;
+  }
+
+  .md\:-ml-\[14rem\] {
+    margin-left: -14rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .md\:ml-7 {
+    margin-left: 1.75rem;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1232,12 +1191,46 @@ html {
     display: none;
   }
 
-  .md\:p-8 {
-    padding: 2rem;
+  .md\:max-w-xs {
+    max-width: 20rem;
   }
 
-  .md\:p-16 {
-    padding: 4rem;
+  .md\:flex-none {
+    flex: none;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:p-0 {
+    padding: 0px;
   }
 
   .md\:px-10 {
@@ -1245,39 +1238,77 @@ html {
     padding-right: 2.5rem;
   }
 
+  .md\:pl-\[10rem\] {
+    padding-left: 10rem;
+  }
+
+  .md\:pl-\[5rem\] {
+    padding-left: 5rem;
+  }
+
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
+  .md\:pl-\[2rem\] {
+    padding-left: 2rem;
+  }
+
+  .md\:pl-\[14rem\] {
+    padding-left: 14rem;
+  }
+
+  .md\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .md\:pl-0\.5 {
+    padding-left: 0.125rem;
+  }
+
+  .md\:pl-\[12rem\] {
+    padding-left: 12rem;
+  }
+
+  .md\:pr-0 {
+    padding-right: 0px;
+  }
+
+  .md\:pr-6 {
+    padding-right: 1.5rem;
+  }
+
+  .md\:pl-\[0\.5rem\] {
+    padding-left: 0.5rem;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-red-400 {
+    --tw-text-opacity: 1;
+    color: rgb(248 113 113 / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 976px) {
-  .lg\:ml-14 {
-    margin-left: 3.5rem;
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .lg\:mt-14 {
-    margin-top: 3.5rem;
+  .lg\:ml-14 {
+    margin-left: 3.5rem;
   }
 
   .lg\:ml-\[12rem\] {
     margin-left: 12rem;
   }
 
-  .lg\:mt-8 {
-    margin-top: 2rem;
-  }
-
-  .lg\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .lg\:mt-4 {
-    margin-top: 1rem;
-  }
-
-  .lg\:mt-2 {
-    margin-top: 0.5rem;
+  .lg\:mt-14 {
+    margin-top: 3.5rem;
   }
 
   .lg\:mt-\[0\.2rem\] {
@@ -1288,6 +1319,30 @@ html {
     margin-top: 8.5rem;
   }
 
+  .lg\:ml-\[22rem\] {
+    margin-left: 22rem;
+  }
+
+  .lg\:ml-\[25rem\] {
+    margin-left: 25rem;
+  }
+
+  .lg\:ml-\[24rem\] {
+    margin-left: 24rem;
+  }
+
+  .lg\:ml-\[20rem\] {
+    margin-left: 20rem;
+  }
+
+  .lg\:ml-\[21rem\] {
+    margin-left: 21rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1296,62 +1351,36 @@ html {
     display: none;
   }
 
-  .lg\:w-\[1024px\] {
-    width: 1024px;
+  .lg\:w-\[1000px\] {
+    width: 1000px;
   }
 
-  .lg\:w-\[985px\] {
-    width: 985px;
+  .lg\:w-\[1024px\] {
+    width: 1024px;
   }
 
   .lg\:w-\[1170px\] {
     width: 1170px;
   }
 
-  .lg\:w-\[1050px\] {
-    width: 1050px;
-  }
-
-  .lg\:w-\[1150px\] {
-    width: 1150px;
-  }
-
-  .lg\:w-\[1140px\] {
-    width: 1140px;
-  }
-
-  .lg\:w-\[1100px\] {
-    width: 1100px;
-  }
-
-  .lg\:w-\[1110px\] {
-    width: 1110px;
-  }
-
-  .lg\:w-\[1000px\] {
-    width: 1000px;
-  }
-
   .lg\:w-\[850px\] {
     width: 850px;
   }
 
-  .lg\:max-w-\[1000px\] {
-    max-width: 1000px;
+  .lg\:w-\[985px\] {
+    width: 985px;
   }
 
   .lg\:max-w-xs {
     max-width: 20rem;
   }
 
-  .lg\:flex-row {
-    flex-direction: row;
+  .lg\:max-w-\[850px\] {
+    max-width: 850px;
   }
 
-  .lg\:space-x-\[10rem\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(10rem * var(--tw-space-x-reverse));
-    margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -1360,49 +1389,46 @@ html {
     margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:p-\[4rem\] {
-    padding: 4rem;
+  .lg\:space-x-\[10rem\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(10rem * var(--tw-space-x-reverse));
+    margin-left: calc(10rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:p-\[3rem\] {
-    padding: 3rem;
+  .lg\:space-x-\[5rem\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(5rem * var(--tw-space-x-reverse));
+    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:p-\[1rem\] {
-    padding: 1rem;
-  }
-
-  .lg\:pt-\[8rem\] {
-    padding-top: 8rem;
-  }
-
-  .lg\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
-  .lg\:pt-\[6rem\] {
-    padding-top: 6rem;
+  .lg\:space-x-\[1rem\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:pl-\[14rem\] {
     padding-left: 14rem;
   }
 
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
   .lg\:pt-16 {
     padding-top: 4rem;
   }
 
-  .lg\:pt-\[8\.5rem\] {
-    padding-top: 8.5rem;
+  .lg\:pt-\[6rem\] {
+    padding-top: 6rem;
   }
 
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .lg\:pt-\[8rem\] {
+    padding-top: 8rem;
   }
 
-  .lg\:text-\[4\.5rem\] {
-    font-size: 4.5rem;
+  .lg\:pl-\[12rem\] {
+    padding-left: 12rem;
   }
 
   .lg\:text-2xl {
@@ -1410,25 +1436,30 @@ html {
     line-height: 2rem;
   }
 
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .lg\:text-\[2rem\] {
     font-size: 2rem;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-\[4rem\] {
-    font-size: 4rem;
   }
 
   .lg\:text-\[3\.2rem\] {
     font-size: 3.2rem;
   }
 
-  .lg\:font-semibold {
-    font-weight: 600;
+  .lg\:text-\[4\.5rem\] {
+    font-size: 4.5rem;
+  }
+
+  .lg\:text-\[4rem\] {
+    font-size: 4rem;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
